css $ js complete

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>buttons-hover</title>
     <!--MARK: link
     -->
-    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <link rel="webpage icon" href="../icon/press-button.png" type="icon" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!--MARK: main
+    -->
     <form action="#">
         <h2>One question for U..</h2>
         <h3>Abhishek is a Good Boy or No ?</h3>
