--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>buttons-hover</title>
-    <!--MARK: link
-    -->
-    <script src="script.js"></script>
+   <!-- custom style -->
     <link rel="webpage icon" href="../icon/press-button.png" type="icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--MARK: main
-    -->
     <form action="#">
         <h2>One question for U..</h2>
         <h3>Abhishek is a Good Boy or No ?</h3>
@@ -21,5 +17,6 @@
           <input type="submit" onclick="nofun()"  value="No" id="no"></input>
         </div>
       </form>
+      <script src="script.js"></script>
   </body>
 </html>
